--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
 import LandingPage from '../components/LandingPage.tsx';
-import About from '../components/About.astro'
+import Experience from '../components/Experience.astro'
 import Layout from '../layouts/Layout.astro';
 
 ---
 
 <Layout>
 	<LandingPage client:load/>
-  <About />
+  <Experience />
+  
   <!-- <Footer /> -->
 </Layout>
