--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,15 @@ import Experience from '../components/Experience.astro'
 import Projects from '../components/Projects.astro'
 import Contact from '../components/Contact.astro'
 import Skills from '../components/Skills.astro'
+import Navbar from '../components/Navbar.astro'
 
 ---
 
 <Layout>
-	<LandingPage client:load/>
-  <Experience />
-  <Skills />
-  <Projects />
-  <Contact />
+    <Navbar />
+    <LandingPage client:load/>
+    <Experience />
+    <Skills />
+    <Projects />
+    <Contact />
 </Layout>
