--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -97,7 +97,7 @@ body {
 }
 
 .background-gradient {
-  background: radial-gradient(circle at center, #330979, #00bbff);
+  background: radial-gradient(circle at center, #7f7f7f, #2c2c2c);
   transition: background 0.1 ease;
 }
 
